--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ DATABASE_URL=sqlite+aiosqlite:///./domus.db
 
 # Gemini API (optional - falls back to simulated responses)
 # Get your API key from: https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=AIzaSyD95KQVeCHL99vnx83-ciNV_vS4n5Lzy8E
+GEMINI_API_KEY=os.getenv("GEMINI_API_KEY")
 
 # IoT Device Token (for fridge camera authentication)
 IOT_DEVICE_TOKEN=mock-iot-device-token
